pod/ingress-treafik/traefik-services.yml
apiVersion: v1
kind: Service
metadata:
  name: traefik
spec:
  ports:
    - protocol: TCP
      name: web
      port: 8000
    - protocol: TCP
      name: admin
      port: 8080
    - protocol: TCP
      name: websecure
      port: 4443
  selector: # 选中pod容器中为app=treafik的容器，容器内部以CusrerIP进行通信
    app: traefik

--- # whoami内部网络转发 到 labels带有app=whoami的pod
# apiVersion: v1
# kind: Service
# metadata:
#   name: whoami
# spec:
#   ports:
#     - protocol: TCP
#       name: web
#       port: 80
#   selector:
#     app: whoami
