pod/ingress-treafik/traefik-ingressroutes.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  namespace: default
spec: # https 带有tls域名证书
  entryPoints:
    - websecure # 对应traefik-deployments文件中 --entrypoints.websecure.Address=:4443
  routes: # 当访问your.example.com、url前缀/notls  your.example.com/notls/abc 转发whoami的service内部网络，再通过service转发到8080的pod服务中
  - match: Host(`your.example.com`) && PathPrefix(`/tls`)
    kind: Rule
    services:
    - name: whoami
      port: 80
  tls: # tls 域名解析器，使用traefik-deployments文件中 --certificatesresolvers.myresolver.acme.tlschallenge ...
    certResolver: myresolver
